Improve @plantuml
- One can use `{@plantuml ...}` to avoid HTML escaping of `<` and `>`. This is similar to the new [JEP 413: Code Snippets in Java API Documentation](https://openjdk.org/jeps/413).
- `@startuml` now unescapes HTML escapings `<` and `>`.
- `@plantuml` is now completely lower case. In case you want to have mixed case, additionally use `PlantUmlMixedCase`.

- Update plantuml