@@ -91,8 +91,8 @@ javadoc {
 def isWindows = org.gradle.internal.os.OperatingSystem.current().isWindows()
 def pathSeparator = isWindows ? ';' : ':'
 
-task java11doc(type: JavaExec) {
-    dependsOn shadowJar
+task java17doc(type: JavaExec) {
+    dependsOn jar
     inputs.file "overview.md"
 
     jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
@@ -106,7 +106,7 @@ task java11doc(type: JavaExec) {
     args = ['-doctitle', 'PlantUML Taglet',
         '-use',
         '-linksource',
-        '-link', 'https://docs.oracle.com/en/java/javase/11/docs/api/',
+        '-link', 'https://docs.oracle.com/en/java/javase/17/docs/api/',
         '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
         '-doclet', 'org.jdrupes.mdoclet.MDoclet',
@@ -129,14 +129,46 @@ task java11doc(type: JavaExec) {
     ignoreExitValue true
 }
 
+task testJavaDoc(type: JavaExec) {
+    dependsOn jar
+
+    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
+    classpath sourceSets.main.compileClasspath
+    classpath files(tasks.jar)
+
+    // ext.destinationDir = '../../jdrupes-taglets.gh-pages/plantuml-taglet/javadoc/'
+
+    main = 'jdk.javadoc.internal.tool.Main'
+    args = ['-doctitle', 'test',
+        '-use',
+        '-linksource',
+        '-link', 'https://docs.oracle.com/en/java/javase/17/docs/api/',
+        '--add-exports', 'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '-tagletpath', files(tasks.jar).asType(List).join(pathSeparator),
+        '-taglet', 'org.jdrupes.taglets.plantUml.PlantUml',
+        '-taglet', 'org.jdrupes.taglets.plantUml.PlantUmlMixedCase',
+        '-taglet', 'org.jdrupes.taglets.plantUml.StartUml',
+        '-taglet', 'org.jdrupes.taglets.plantUml.EndUml',
+        '-d', 'build/test-javadocs',
+        '-sourcepath', 'testfiles/',
+        '-subpackages', 'test:testMore',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED'
+        ]
+
+    ignoreExitValue true
+}
+
+
 task sourcesJar(type: Jar, dependsOn: classes) {
     archiveClassifier.set('sources')
     from sourceSets.main.allSource
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
+task javadocJar(type: Jar, dependsOn: java17doc) {
     archiveClassifier.set('javadoc')
-    from java11doc.destinationDir
+    from java17doc.destinationDir
 }
 
 artifacts {
